--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuikit/icons": "^0.8.1",
+    "@vuikit/theme": "^0.8.1",
+    "apexcharts": "^4.4.0",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "highcharts-vue": "^2.0.1",
+    "pinia": "^3.0.1",
+    "uikit": "^3.23.0",
+    "vue": "^3.5.13",
+    "vue3-apexcharts": "^1.8.0",
+    "vuikit": "^0.8.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +25,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/test-utils": "^2.4.6",
+    "babel-jest": "^29.7.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "jest": "^29.7.0"
   },
   "eslintConfig": {
     "root": true,
