Agregar dependencia de trabajo para el job de despliegue en main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
         run: npm run build
         
   Deploy-Production:
+    needs: Build
     permissions:
       contents: 'read'
       id-token: 'write'
